fixed overflow issues

--- a/sass/partials/_base-styles.scss
+++ b/sass/partials/_base-styles.scss
@@ -4,6 +4,7 @@ html {
 }
 
 header {
+    overflow: hidden;
     width: 100vw;
     height: 100vh;
     padding: 9px;
