--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -378,11 +378,6 @@
 }
 
 @media (max-width: 480px) {
-    // Base Styles
-    html {
-        overflow: hidden;
-    }
-
     header {
         padding: 0px;
         padding-bottom: 80px;
