--- a/sass/styles.css
+++ b/sass/styles.css
@@ -227,6 +227,7 @@ html {
 }
 
 header {
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   padding: 9px;
@@ -1994,9 +1995,6 @@ h1 {
   }
 }
 @media (max-width: 480px) {
-  html {
-    overflow: hidden;
-  }
   header {
     padding: 0px;
     padding-bottom: 80px;
